--- a/cn-gallery.html
+++ b/cn-gallery.html
@@ -87,7 +87,7 @@
 							<span class="hover-caption">TUV Certification</span>
 						</span>
 					</a> <!-- /.gallery-item -->
-					<a href="assets/images/gallery/HeavyMetalReport.pdf" class="col-md-3 col-sm-4 gallery-item lightbox" target="_blank">
+					<a href="assets/images/gallery/HeavyMetalReport.pdf" class="col-md-3 col-sm-4 gallery-item lightbox">
 						<img src="assets/images/gallery/thumb/Certificate1.png" alt="">
 						<span class="on-hover">
 							<span class="hover-caption">Fan's Gout Heavy Metal Report</span>
