--- a/cn-gallery.html
+++ b/cn-gallery.html
@@ -93,7 +93,7 @@
 							<span class="hover-caption">Fan's Gout Heavy Metal Report</span>
 						</span>
 					</a> <!-- /.gallery-item -->
-					<a href="assets/images/gallery/MicrobialReport.pdf" class="col-md-3 col-sm-4 gallery-item lightbox" target="_blank">
+					<a href="assets/images/gallery/MicrobialReport.PDF" class="col-md-3 col-sm-4 gallery-item lightbox" target="_blank">
 						<img src="assets/images/gallery/thumb/Certificate2.png" alt="">
 						<span class="on-hover">
 							<span class="hover-caption">Fan's Gout Relief Microbial Report</span>
