--- a/cn-gallery.html
+++ b/cn-gallery.html
@@ -88,13 +88,13 @@
 						</span>
 					</a> <!-- /.gallery-item -->
 					<a href="assets/images/gallery/HeavyMetalReport.pdf" class="col-md-3 col-sm-4 gallery-item lightbox" target="_blank">
-						<img src="assets/images/gallery/thumb/Certificate1.png" alt="">
+						<img src="assets/images/gallery/thumb/Certificate1.png" alt="" target="_blank">
 						<span class="on-hover">
 							<span class="hover-caption">Fan's Gout Heavy Metal Report</span>
 						</span>
 					</a> <!-- /.gallery-item -->
 					<a href="assets/images/gallery/MicrobialReport.PDF" class="col-md-3 col-sm-4 gallery-item lightbox" target="_blank">
-						<img src="assets/images/gallery/thumb/Certificate2.png" alt="">
+						<img src="assets/images/gallery/thumb/Certificate2.png" alt="" target="_blank">
 						<span class="on-hover">
 							<span class="hover-caption">Fan's Gout Relief Microbial Report</span>
 						</span>
