--- a/cn-gallery.html
+++ b/cn-gallery.html
@@ -99,7 +99,7 @@
 							<span class="hover-caption">Fan's Gout Relief Microbial Report</span>
 						</span>
 					</a> <!-- /.gallery-item -->
-					<a href="google.com" class="col-md-3 col-sm-4 gallery-item lightbox" target="_blank">
+					<a href="www.google.com" class="col-md-3 col-sm-4 gallery-item lightbox" target="_blank">
 						<img src="assets/images/gallery/thumb/Certificate2.png" alt="">
 						<span class="on-hover">
 							<span class="hover-caption">Fan's Gout Relief Microbial Report</span>
