--- a/cn-gallery.html
+++ b/cn-gallery.html
@@ -87,24 +87,18 @@
 							<span class="hover-caption">TUV Certification</span>
 						</span>
 					</a> <!-- /.gallery-item -->
-					<a href="assets/images/gallery/HeavyMetalReport.pdf" class="col-md-3 col-sm-4 gallery-item lightbox" target="_blank">
+					<a href="assets/images/gallery/HeavyMetalReport.pdf" class="col-md-3 col-sm-4 gallery-item lightbox">
 						<img src="assets/images/gallery/thumb/Certificate1.png" alt="">
 						<span class="on-hover">
 							<span class="hover-caption">Fan's Gout Heavy Metal Report</span>
 						</span>
 					</a> <!-- /.gallery-item -->
-					<a href="assets/images/gallery/MicrobialReport.PDF" class="col-md-3 col-sm-4 gallery-item lightbox" target="_blank">
+					<a href="assets/images/gallery/MicrobialReport.PDF" class="col-md-3 col-sm-4 gallery-item lightbox">
 						<img src="assets/images/gallery/thumb/Certificate2.png" alt="">
 						<span class="on-hover">
 							<span class="hover-caption">Fan's Gout Relief Microbial Report</span>
 						</span>
-					</a> <!-- /.gallery-item -->
-					<a href="www.google.com" class="col-md-3 col-sm-4 gallery-item lightbox" target="_blank">
-						<img src="assets/images/gallery/thumb/Certificate2.png" alt="">
-						<span class="on-hover">
-							<span class="hover-caption">Fan's Gout Relief Microbial Report</span>
-						</span>
-					</a> <!-- /.gallery-item -->					
+					</a> <!-- /.gallery-item -->				
 			</div>
 		</div>
 	</div> <!-- /.main-container  -->
