--- a/cn-about.html
+++ b/cn-about.html
@@ -52,8 +52,8 @@
                     <li class="has-child"><a href="#">制品</a>
 
                       <ul class="submenu">
-                         <li class="submenu-item"><a href="cn-goutrelief.html">痛风救济 </a></li>
-						 <li class="submenu-item"><a href="cn-jointrelief.html">联合救助 </a></li>
+                         <li class="submenu-item"><a href="cn-goutrelief.html">Gout Relief </a></li>
+						 <li class="submenu-item"><a href="cn-jointrelief.html">Joint Relief </a></li>
                       </ul>
 
                     </li>
@@ -87,7 +87,7 @@
 				<div class="col-md-6">
 					<h2 class="title-style-2">ABOUT FAN <span class="title-under"></span></h2>
 					<p>
-						范式国际致力于向全世界的人们提供高品质的医疗产品。通过我们安全的生产以及强有力的测试，确保提供给客户的都是最好的产品。业内经验丰富的制造厂商的技术支撑，为我们向人们提供物美价廉的药品的同时保证其完美的品质。
+						范氏式国际致力于向全世界的人们提供高品质的医疗产品。通过我们安全的生产以及强有力的测试，确保提供给客户的都是最好的产品。业内经验丰富的制造厂商的技术支撑，为我们向人们提供物美价廉的药品的同时保证其完美的品质。
 					</p>
 					<p> 范氏国际的Gout Relief可以治愈痛风引起的各种不适。老少人士均可以服用，其Ayurvedic药物极大的减缓疼痛并且可以持续保持良好的效果。
 					</p>
@@ -143,7 +143,7 @@
 
                         <div class="footer-col">
 
-                            <h4 class="footer-title">系我们 <span class="title-under"></span></h4>
+                            <h4 class="footer-title">联系我们<span class="title-under"></span></h4>
 
                             <div class="footer-content">
 
