--- a/cn-gallery.html
+++ b/cn-gallery.html
@@ -52,8 +52,8 @@
                     <li class="has-child"><a href="#">制品</a>
 
                       <ul class="submenu">
-                         <li class="submenu-item"><a href="cn-goutrelief.html">痛风救济 </a></li>
-						 <li class="submenu-item"><a href="cn-jointrelief.html">联合救助 </a></li>
+                         <li class="submenu-item"><a href="cn-goutrelief.html">Gout Relief </a></li>
+						 <li class="submenu-item"><a href="cn-jointrelief.html">Joint Relief </a></li>
                       </ul>
 
                     </li>
@@ -150,7 +150,7 @@
 
                         <div class="footer-col">
 
-                            <h4 class="footer-title">系我们 <span class="title-under"></span></h4>
+                            <h4 class="footer-title">联系我们<span class="title-under"></span></h4>
 
                             <div class="footer-content">
 
