--- a/cn-gallery.html
+++ b/cn-gallery.html
@@ -78,27 +78,27 @@
 			<h1 class="page-title">证明 <span class="title-under"></span></h1>
 		</div>
 	</div>
-	<div class="main-container">
-		<div class="container gallery fadeIn animated">
+  <div class="main-container">
+		<div class="container fadeIn animated">
 			<div class="row">
-					<a href="assets/images/gallery/fancert_tuv_cert.jpeg" class="col-md-3 col-sm-4 gallery-item lightbox">
-						<img src="assets/images/gallery/thumb/fancert_tuv_cert.jpeg" alt="">
-						<span class="on-hover">
+					<a href="assets/images/gallery/fancert_tuv_cert.jpeg" class="col-md-3 col-sm-4 gallery-item">
+						<img src="assets/images/gallery/thumb/fancert_tuv_cert.jpeg" alt="" >
+						<!--<span class="on-hover">
 							<span class="hover-caption">TUV Certification</span>
-						</span>
+						</span>-->
 					</a> <!-- /.gallery-item -->
-					<a href="assets/images/gallery/HeavyMetalReport.pdf" class="col-md-3 col-sm-4 gallery-item lightbox" target="_blank">
+					<a href="assets/images/gallery/HeavyMetalReport.pdf" class="col-md-3 col-sm-4 gallery-item" target="_blank">
 						<img src="assets/images/gallery/thumb/Certificate1.png" alt="">
-						<span class="on-hover">
+						<!--<span class="on-hover">
 							<span class="hover-caption">Fan's Gout Heavy Metal Report</span>
-						</span>
+						</span>-->
 					</a> <!-- /.gallery-item -->
-					<a href="assets/images/gallery/MicrobialReport.PDF" class="col-md-3 col-sm-4 gallery-item lightbox" target="_blank">
+					<a href="assets/images/gallery/MicrobialReport.PDF" class="col-md-3 col-sm-4 gallery-item" target="_blank">
 						<img src="assets/images/gallery/thumb/Certificate2.png" alt="">
-						<span class="on-hover">
+						<!--<span class="on-hover">
 							<span class="hover-caption">Fan's Gout Relief Microbial Report</span>
-						</span>
-					</a> <!-- /.gallery-item -->				
+						</span>-->
+					</a> <!-- /.gallery-item -->
 			</div>
 		</div>
 	</div> <!-- /.main-container  -->
