--- a/cn-index.html
+++ b/cn-index.html
@@ -276,7 +276,7 @@
 
                     <div class="reasons-col animate-onscroll fadeIn">
 
-                        <img src="assets/images/reasons/prevention_haha.jpg" alt="">
+                        <img src="assets/images/reasons/Prevention_haha.jpg" alt="">
 
                         <div class="reasons-titles">
 
@@ -293,7 +293,7 @@
 
                     <div class="reasons-col animate-onscroll fadeIn">
 
-                        <img src="assets/images/reasons/gout.jpg" alt="">
+                        <img src="assets/images/reasons/Gout.jpg" alt="">
 
                         <div class="reasons-titles">
 
@@ -321,7 +321,7 @@
 
             <h2 class="title-style-1">国家 <span class="title-under"></span></h2>
 
-            <ul class="owl-carousel list-unstyled list-sponsors">
+            <ul class="country-list list-unstyled list-sponsors">
 
               <li> <img class="img-fluid" src="assets/images/sponsors/asean.png" alt=""></li>
               <li> <img class="img-fluid" src="assets/images/sponsors/china.png" alt=""></li>
